# itmo-machine-learning

./: .gitignore
Codeforces/: CMakeLists.txt
Codeforces/src/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp  G.cpp  H.cpp  I.cpp  L.cpp  M.cpp  N.cpp  O.cpp  P.cpp  Q.cpp
Labs/AdaBoost/: AdaBoost.ipynb
Labs/Bayes/: Bayes.ipynb
Labs/CNN/: CNN.ipynb
Labs/Clust/: Clust.ipynb
Labs/DT/: DT.ipynb
Labs/Linear/: linear.ipynb
Labs/SVM/: SVM.ipynb
Labs/kNN/: CMakeLists.txt  analcatdata_dmft.csv  f-score  f_score.cpp  in.txt  input.txt  kNN.ipynb  meta_ensembles.csv  out.txt  prediction  prediction.cpp  visualizing_livestock.csv  Каменев Юрий Владимирович KNN.ipynb
Labs/Условия лабораторных/: 1. kNN.docx  2. Linear.docx  3. SVM.docx  4. Bayes.docx  5. DT.docx  6. Boost.docx  7. CNN.docx  8. RNN.docx  9. Clust.docx
